--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,3 +15,18 @@ name = "zero2prod"
 actix-web = "4"
 tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
 reqwest = "0.11"
+serde = { version = "1", features = ["derive"]}
+config = "0.13"
+dotenvy = "0.15.6"
+
+[dependencies.sqlx]
+version = "0.6"
+default-features = false
+features = [
+    "runtime-actix-rustls",
+    "macros",
+    "postgres",
+    "uuid",
+    "chrono",
+    "migrate"
+]
