--- a/.github/workflows/general.yml
+++ b/.github/workflows/general.yml
@@ -6,11 +6,11 @@ on:
   # this specific branch (a.k.a. book chapter).
   push:
     branches:
-      - root-chapter-03-part1
+      - root-chapter-04
   pull_request:
     types: [ opened, synchronize, reopened ]
     branches:
-      - root-chapter-03-part1
+      - root-chapter-04
 
 env:
   CARGO_TERM_COLOR: always
