--- a/Cargo.toml
+++ b/Cargo.toml
@@ -20,6 +20,7 @@ config = "0.13"
 dotenvy = "0.15.6"
 uuid = { version = "1", features = ["v4"] }
 chrono = "0.4.15"
+env_logger = "0.9"
 
 [dependencies.sqlx]
 version = "0.6"
