--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,6 +12,7 @@ path = "src/main.rs"
 name = "zero2prod"
 
 [dependencies]
+tracing = { version = "0.1", features = ["log"] }
 actix-web = "4"
 tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
 reqwest = "0.11"
@@ -20,7 +21,10 @@ config = "0.13"
 dotenvy = "0.15.6"
 uuid = { version = "1", features = ["v4"] }
 chrono = "0.4.15"
-env_logger = "0.9"
+tracing-subscriber = { version = "0.3", features = ["registry", "env-filter"]}
+tracing-bunyan-formatter = "0.3"
+tracing-log = "0.1"
+
 
 [dependencies.sqlx]
 version = "0.6"
